# GenNJOY

./: .gitignore  GenNJOY.py  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
data/hdf5_library/: cross_sections.xml
data/incident_neutron_ace/: H1  H2  H3  xsdir
data/njoy_input_decks/: H1.njoy  H2.njoy  H3.njoy  hwtr.njoy
data/thermal_scattering_ace/: xsdir
gennjoy/: cli.py  compile_openmc_library.py  fetch_endf_library.py  generate_neutron_input.py  generate_tsl_input.py  njoy_execution_engine.py  run_neutron_processing.py  run_tsl_processing.py  temperature_index.json  xsdir_mcnp5
gennjoy/data/hdf5_library/: H1.h5  H2.h5  H3.h5  cross_sections.xml
gennjoy/data/incident_neutron_ace/: H1  H2  H3  xsdir
gennjoy/data/njoy_input_decks/: B11.njoy  C0.njoy  H1.njoy  H2.njoy  H3.njoy  He3.njoy  He4.njoy  Li6.njoy  be-o.njoy  c-sic.njoy  hwtr.njoy  lwtr.njoy
gennjoy/data/thermal_scattering_ace/: xsdir
gennjoy/inputs/: neutron_inventory.i  tsl_inventory.i  tsl_process_batch.i
inputs/: input_n.i  input_n_global.i  input_tsl.i  input_tsl_global.i  neutron_inventory.i  neutron_process_batch.i  tsl_inventory.i  tsl_process_batch.i
njoy_bin/: njoy
src/: DataGenerator.py  conversion_ace_hdf5.py  dict_neutron.json  dict_temperature.json  dict_thermal.json  download_data.py  fetch_endf_library.py  gen_dict_json.py  gen_input_n.py  gen_input_tsl.py  gen_njoy_n.py  gen_njoy_tsl.py  generate_neutron_input.py  generate_tsl_input.py  njoy_execution_engine.py  run_neutron_processing.py  run_tsl_processing.py  temp.py  temperature_index.json
